--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,47 @@
 [build]
-  publish = "site"
+  base = "frontend"
+  publish = "frontend/.next"
+  command = "npm run build"
+
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_VERSION = "9"
+
+# Redirect all requests to index.html for SPA routing
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+# Production environment settings
+[context.production.environment]
+  NODE_ENV = "production"
+
+# Deploy preview settings
+[context.deploy-preview.environment]
+  NODE_ENV = "production"
+
+# Branch deploy settings
+[context.branch-deploy.environment]
+  NODE_ENV = "production"
+
+# Headers for security and performance
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
+
+# Cache static assets
+[[headers]]
+  for = "/static/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
-  for = "/data/*"
+  for = "/_next/static/*"
   [headers.values]
-    Access-Control-Allow-Origin = "*"
-
-
+    Cache-Control = "public, max-age=31536000, immutable"
